# Movie-Recommendation-System

./: index.html  main.py  pyproject.toml
images/: poster_cache.json
static/css/: style.css
static/js/: app.js
